Versao 1.4.20
2010-03-15 23:03
	- Ctrl+Shift+F resolvido sem modificar a ordem dos atributos. (by lucianocf)
	
2010-03-03 01:21
	- Remocao da dependencia do GEF (temporariamente, enquanto a visao de layout	
		nao estah OK)
	
Versao 1.4.19
	- Sugestao de valores para os atributos "name" e "value" da tag 
		"descriptorParam"

Versao 1.4.10
	- Correcao do problema de ter que abrir de novo o editor para funcionar
	a edição de preferência das Preview's (OK)
	- Sugestão dos atributos default do elemento property
		- Tem q dar uma revisada, pq aqueles atributos default são apenas para
		objetos de mídia "settings".
		
	- Correção do tamanho do tooltip de texto
	- Opcao de validacao on time
	
	- ncl30-validator
		BUG: falso negativo para descriptorSwitch apontando para descriptor.
			- Resolvido! 

Versao 1.4.7
	- Alguma mudança causou problemas na sugestao de conteudo que estava em
	outro arquivo! Problema resolvido!
	
Versao 1.4.6
2009-11-18
	- Correcao da sugestao do refer (Incompleta)
	
Versao 1.4.3
2009-10-31
	- Validação de source de arquivos, ainda com bugs quando em espaço!
	
2009-11-01
	- Preferencia pra habilitar ou nao as previsualizações!
	
Versao 1.4.2
2009-10-30
	- Desabilitado as pre-views temporariamente, pq tava abrindo infinitas 
	janelas novas.
		Problemas por causa do JComponent. 
	
Versao 1.4.1
2009-10-14
	- Mensagem de erro quando pedia para formatar (Ctrl+Shift+F).
	Antes estava no codigo, agora foi movida para o NCLEditorMessages.properties 
	Ok!
	
	- Autocomplete em XML que nao estah bem formado. 
	Antes gerava uma mensagem de erro a partir da Excecao! Agora gera uma 
	mensagem de erro e mesmo assim autocompleta (com o que foi possivel fazer o 
	parser).
	OK!
	
Versao 1.4.0 (beta)
2009-09-30
	- Pre-visualizacao de imagens em JComponent (OK)
	- Pre-visualizacao de Video usando player do sistema
	- Hiperlinks inversos (OK)
	
2009-09-24
	- Validacao feita em background, idependente do usuario salvar o documento.
		OK!
		Resolvido BUG ()
	
2009-09-16